--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -11,7 +11,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.19.2"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -21,7 +23,6 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^22.21.0",
-    "express": "^4.19.2",
     "mocha": "^6.2.3",
     "nodemon": "^2.0.22",
     "request": "^2.88.2",
